force-app/main/default/objects/Survey__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Survey Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>