force-app/main/default/objects/Survey__c/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <displayFormat>SURVEY-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Survey ID</label>
    <type>AutoNumber</type>
</CustomField>